--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "cypress/**/*.js"
     ],
     "devDependencies": {
-        "cypress": "^12.17.2"
+        "cypress": "^12.17.2",
+        "cypress-downloadfile": "^1.2.3",
+        "cypress-file-upload": "^5.0.8"
     }
 }
