--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
     "scripts": {
         "cy:open": "cypress open",
-        "cy:run": "cypress run -b chrome",
+        "cy:run": "rimraf mochawesome-report cypress/results mochawesome.json && cypress run",
+        "generateReport": "npx mochawesome-merge 'cypress/results/*.json' > mochawesome.json && npx marge mochawesome.json",
+        "cy:run:report" : "npm run cy:run && npm run generateReport",
         "cy:run:cloud": "cypress run --record -b chrome --key 768ade64-5d52-4142-8db8-b0001c48df4c",
         "cy:run:chrome": "cypress run --browser chrome"
     },
@@ -12,6 +14,9 @@
     "devDependencies": {
         "cypress": "^12.17.2",
         "cypress-downloadfile": "^1.2.3",
-        "cypress-file-upload": "^5.0.8"
+        "cypress-file-upload": "^5.0.8",
+        "mochawesome": "^7.1.3",
+        "mochawesome-merge": "^4.3.0",
+        "mochawesome-report-generator": "^6.2.0"
     }
 }
